variables definidas en values y dentro de tus cajas de texto o botones puedes pintar su valor llamandola @string/msg_aparece

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="msg_aparece">Aparece</string>
+    <string name="msg_desaparece">Ocultate</string>
+
 </resources>
